# chzzk-chat-peak-analyze

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  channels.example.yaml  config.example.yaml  docker-compose.yaml  generate_token.py  pyproject.toml  test_baresa.py  test_simple.py
nokchart/: __init__.py  aggregation.py  cli.py  collector.py  config.py  models.py  peak_detection.py  topic_analysis.py  visualization.py  watcher.py
nokchart/chat/: __init__.py  client.py  exceptions.py  http.py  models.py  reconnect.py  websocket.py
scripts/: sync-nokchart.sh
tests/: __init__.py  test_models.py
