[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nokchart*"]
exclude = ["output*", "tests*"]

[project]
name = "nokchart"
version = "0.1.0"
description = "Chat trend collection, peak analysis, and visualization tool for Chzzk streams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
    # "chzzkpy>=2.1.5",  # Replaced with custom WebSocket client (nokchart.chat)
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
nokchart = "nokchart.cli:cli"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
